Fix image layout shifts
Prevent layout shifts caused by loading:

- Hero image

- Logo images in nav and footer

Fixes #9

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -54,6 +54,6 @@ button {
 
 img,
 svg {
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
